changed for title section

--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ h3, h4, h5, h6{
 /* ALL SECTIONS */
 .section-title{
     font-weight: 700;
-    margin-bottom: 50px;
+    margin-bottom: 0px;
     font-size: 2em;
     position:relative;
     text-align: center;
@@ -407,6 +407,7 @@ h3, h4, h5, h6{
       height: 0;
       overflow: hidden;
       margin-top: 85px;
+      margin-bottom: 0;
     }
   
     .video-container iframe {
